Fix inline notification w/ button padding on mobile

--- a/src/scss/_cp-inline-notification.scss
+++ b/src/scss/_cp-inline-notification.scss
@@ -24,6 +24,10 @@
     font-weight: 200;
     &.has-button {
       padding-right: 12rem;
+      @include respond-to('s+') {
+        padding-right: 0;
+        padding-bottom: 4rem;
+      }
     }
     &.no-caption {
       margin-left: 2.7rem;
